--- a/gb/24/10/2/n14342637.md
+++ b/gb/24/10/2/n14342637.md
@@ -3,50 +3,46 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>浙江雁荡山缆车突发事故 一女游客坠落受伤</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/10/id14342706-MixCollage-02-Oct-2024-12-33-PM-380.jpg" />
-<h6>10月1日，浙江省温州市雁荡山景区内一辆缆车突发故障，导致一名女游客坠落受伤。（网络截图）
-</h6>
+<h6>10月1日，浙江省温州市雁荡山景区内一辆缆车突发故障，导致一名女游客坠落受伤。（网络截图）</h6>
 <hr>
 	<p>【大纪元2024年10月02日讯】10月1日，浙江省温州市雁荡山景区内一辆缆车突发故障，导致一名女游客坠落受伤。</p>
 <p>10月1日，有网民在社交媒体上发文称，雁荡山景区内一辆缆车发生故障，导致一名游客意外跌出，并配有图片。图片显示，一辆印有“雁荡山悬崖索道欢迎”的黄色缆车在空中倾斜。</p>
 <p>有目击者在社交平台发文说：“出事故的是1号缆车，我们坐的是2号缆车，当时风有点大，缆车摇摇晃晃突然咣的一声就断了，听到1号缆车门打开，然后有位女士掉下去了，她的孩子一直在哭，说他妈妈掉下去了，快来救救他妈妈。”</p>
-<figure id="attachment_14342702" aria-describedby="caption-attachment-14342702" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/10/id14342702-2508f92418ac238bb534226f011bfffe.jpg"><img decoding="async" class="size-full wp-image-14342702" src="https://i.epochtimes.com/assets/uploads/2024/10/id14342702-2508f92418ac238bb534226f011bfffe.jpg" alt="" width="450" b="360" /></a><figcaption id="caption-attachment-14342702" class="wp-caption-text">（网络截图）</figcaption></figure>
+<figure id="attachment_14342702" aria-describedby="caption-attachment-14342702" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/10/id14342702-2508f92418ac238bb534226f011bfffe.jpg" rel="nofollow"><img decoding="async" class="size-full wp-image-14342702" src="https://i.epochtimes.com/assets/uploads/2024/10/id14342702-2508f92418ac238bb534226f011bfffe.jpg" alt="" width="450" b="360"></a><figcaption id="caption-attachment-14342702" class="wp-caption-text">（网络截图）</figcaption></figure>
 <p>据“极目新闻”报导，游客张先生介绍，索道上一辆缆车的门被大风吹开了，有一名游客意外坠落。另一名游客龙女士（化名）则表示，当天她在事发前乘坐缆车下了山，车内没有安全带。</p>
 <p>雁荡山景区工作人员表示，目前索道因检测原因已经暂停。对于缆车故障致游客堕下一事，该工作人员表示不掌握情况。</p>
 <p>据澎湃新闻2日报导，记者从当地文旅部门获悉，受伤游客正在医院救治，暂无生命危险。</p>
-<p>同日，雁荡山风景旅游管理委员会通告称，1日傍晚，雁荡山方洞索道突发故障，一名游客（女性，34周岁）在一缆车发生意外受伤，事故具体原因正在调查中。索道现已暂停使用，待全面检修后予以开放，具体开放时间后续予以公布。</p>
+<p>同日，雁荡山风景旅游管理委员会通告称，1日傍晚，雁荡山方洞索道突发故障，一名游客（女性，34周岁）在一缆车上发生意外受伤，事故具体原因正在调查中。索道现已暂停使用，待全面检修后予以开放，具体开放时间后续予以公布。</p>
 <p>雁荡山位于浙江温州乐清市境内，是中国十大名山之一。1982年被中共国务院列为首批国家重点风景名胜区。</p>
 <p>责任编辑：夏松</p>
-	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/30/n14340941.md#1">十一国殇日 加拿大12团体联盟抗议中共暴政</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/30/n14341016.md#1">十一前夕海外华人中领前高呼：推翻中共暴政</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341948.md#1">“十一”怪象：年轻人穿精神病院病号服出游</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14342063.md#1">十一邵阳市公安局内讧 局长李长跃遭枪击</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645563.md#1">印尼苏门答腊岛洪灾救援困难 已致248人死</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645549.md#1">川普政府与西北大学达和解 恢复联邦补助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645423.md#1">折扣带动黑五买气 网购强劲 实体店回温</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645425.md#1">组图：斯里兰卡暴雨酿重灾 123死130失踪</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/16/n10979206.md#1" target="_blank">共产暴政录：“五一六”反革命阴谋集团案</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/31/n11292679.md#1" target="_blank">美国国务院将对迫害法轮功者 严格审核签证</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/7/18/n10570999.md#1" target="_blank">凌晓辉：毒害人类灵魂的共产主义理论（中）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/27/n10092593.md#1" target="_blank">大学教授修炼身心受益 反迫害控告江泽民</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/27/n14339816.md#1">【未解之谜】中国北方异象频现 有大事要发生？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/24/n14317010.md#1">【古道人生】什么是真善？看他怎么待穷山民 善报不招自来！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/20/n14335274.md#1">中医玄妙医理 鸭子唾液起大作用 医生怎样悟到？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/28/n14340375.md#1">《非常主播》：在幽默与温情中寻找家庭的美好</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/21/n14335841.md#1">以德传家 子孙得福</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14342175.md#1">【探索时分】中共核潜艇还没海试就沉了</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/29/n14340759.md#1">【百年真相】中共军工系统高官大批“失踪”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341617.md#1">【时事金扫描】中共惊天咒语 八大老朋友挨个倒</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/30/n14340926.md#1">沈舟：中共试射东风-31导弹泄露了什么？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/30/n14341055.md#1">中共托股市能维持多久？专家析幕后猫腻</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/27/n14339408.md#1">6款日本车十月或大幅降价 含丰田佳美</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/29/n14340516.md#1">《侏罗纪4》杀青 史嘉蕾演行动专家负责浪漫片段</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/28/n14340390.md#1">Netflix上半年收视榜出炉 《泪之女王》登韩剧冠军</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/28/n14340367.md#1">传范冰冰与大马导演张吉安合作新片 经纪人回应</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/30/n14340889.md#1">《女神降临》日本电影版 木村拓哉女儿演主角</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/30/n14341547.md#1">好莱坞明星柴克·莱威宣布支持川普 震惊业界</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/30/n14341157.md#1">昆虫学家教你几招 防止蚂蚁入侵浴室</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/29/n14340557.md#1">世界最慢的特快列车在瑞士 平均时速36公里</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/22/n14335962.md#1">中医食疗 5食物护肺提升免疫力</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/26/n14338816.md#1">有备无患 这些应急食物可应对没水没电的日子</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/28/n14340278.md#1">牛奶喝不完 就用来做6种美食吧！</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/26/n14643889.md#1">婚姻幸福之道：阴阳平衡 琴瑟和鸣</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650550.md#1">【未解之谜】NASA也无法解释 太阳系神秘入侵者</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652776.md#1">【军事情报局】泰柬战争升级 F-16低空轰炸</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652899.md#1">【直播】NASA为探索月球、火星所做的准备</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652954.md#1">【百年真相】半夜鸡不叫：周扒皮冤案揭秘</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651393.md#1">普渡大学为何指示院系拒收中国留学生</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651372.md#1">【直播】NASA太空人告别太空站并关闭舱门</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651371.md#1">堕胎变催育 中共黑手再次伸向中国女性</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652089.md#1">巧合还是刻意？中共官微帖文惊现“于朦胧”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651415.md#1">刘诗诗得奖遭临时撤换 主办方“爱奇艺”挨轰</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652213.md#1">张柏芝遭索赔逾千万 法庭上情绪失控崩溃痛哭</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652972.md#1">消失一年被传死讯 陆网红冯提莫自曝停工内幕</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652371.md#1">同一双袜子可以穿两次以上再洗吗？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/10/2/n14342637.htm">浙江雁荡山缆车突发事故 一女游客坠落受伤</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/10/2/n14342637.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
